<resources>
    <string name="app_name">Parking APP</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_save_location">Save Location</string>
    <string name="CarLocationText" >Car Location</string>
    <string name="CarLocationTextNew">Car Location</string>
    <string name="title_activity_linkedin">Barak\'s Linkedin Page</string>
    <string name="title_activity_parking_lots_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_activity_about">About</string>
    <string name="cv_file">WORK EXPERIENCE \t\t\t November 2014 – Present  \t\tTier 1 Support Representative\t\t\t IBM Trusteer, Tel-Aviv-Yafo Technical Support for the company\'s security software through several communication channels. Detection of Phishing websites, brand abuse and fraudulent websites.  2011-2014 \tSenior Representative \t\tTeleOffice call center, Rishon Lezion \t\tProvided technical assistance to phone representative.  \t\tInteracted with customers to provide and process information in response to \t\t\t\ttheir enquiries. Worked with CRMc, Oracle IS, and CCMA software.   2009-2010\tFirst Aid Instructor \t\tHa-Merkaz Le-Refuat Chirum, Petach-Tikva. \t\tTaught and trained First Aid classes for individuals and groups.  2011\tSeasonal job as a mobile Clinic Manager in scout summer camps HaTsofim. Tasks included managing a team of 10-15 paramedics and an assigned doctor available 24/7 for over 3,000 children.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigate">Navigate</string>
    <string name="welcome">Welcome</string>
    <string name="car_number">Car Number :</string>
    <string name="car_type">Car Type :</string>
    <string name="your_car_is_located">Your Car Is Currently Located at:</string>
    <string name="save_question">Save current location?</string>
    <string name="enterName">Enter Your Name</string>
    <string name="enterCarNumber">Enter Car\'s Number</string>
    <string name="EnterCarType">Enter Car\'s Type</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="savebutton">Save</string>
    <string name="backbutton">Back</string>
    <string name="title_activity_text_view" translatable="false">TextViewActivity</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="appwidget_text">Save Location</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_history" translatable="false">HistoryActivity</string>
    <string name="home" translatable="false">Home</string>
    <string name="near" translatable="false">Nearest Parking Lots</string>
    <string name="title_activity_street" translatable="false">StreetActivity</string>
    <string name="title_activity_geocoder" translatable="false">Geocoder</string>

    <string-array name="menu">
        <item>Set as Your Car\'s Location</item>
        <item>Navigate to</item>
        <item>Street View</item>
        <item>Delete</item>
        <item>Edit Location Name</item>
    </string-array>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>


</resources>
