<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="barak.com.parkingapp.ActivityAbout">

    <item android:id="@+id/homeActivity"
        android:title="@string/home"
        app:showAsAction="never|withText"/>

    <item android:id="@+id/lastparkingplace"
        android:title="@string/title_activity_save_location"
        android:icon="@drawable/iconparkingnew"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/navigate"
        android:title="Navigate"
        android:icon="@drawable/navigation"
        app:showAsAction="never"/>

    <item android:id="@+id/showParkingLots"
        android:title="@string/near"
        android:icon="@drawable/parkinglots"
        app:showAsAction="never"
        />


    <!-- Settings, should always be in the overflow -->

</menu>
