<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="barak.com.parkingapp.SettingsActivity">


    <item android:id="@+id/homeActivity"
        android:title="@string/home"
        app:showAsAction="never|withText"/>

    <item android:id="@+id/lastparkingplace"
        android:title="@string/title_activity_save_location"
        android:icon="@drawable/iconparkingnew"
        app:showAsAction="never"/>

    <item android:id="@+id/navigate"
        android:title="Navigate"
        android:icon="@drawable/navigation"
        app:showAsAction="never"/>

    <item android:id="@+id/showParkingLots"
        android:title="@string/near"
        android:icon="@drawable/parkinglots"
        app:showAsAction="never"
        />
    <item android:id="@+id/about_the_developer" android:title="About"
        android:orderInCategory="1" app:showAsAction="never" />
</menu>
