<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/swipe">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7B68EE"
    android:id="@+id/scroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#7B68EE"
        android:orientation="vertical"
        tools:context="barak.com.parkingapp.SettingsActivity"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="25dp">

            <TextView
                android:textColor="#B0C4DE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/enterName"
                android:id="@+id/textView7"
                android:layout_marginTop="10dp" />

            <EditText
                android:textColor="#B0C4DE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextEnterName"
                android:layout_marginLeft="30dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <TextView
                android:textColor="#B0C4DE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/enterCarNumber"
                android:id="@+id/textView9"
                android:layout_marginTop="10dp" />

            <EditText
                android:textColor="#B0C4DE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextEnterCarNumber"
                android:layout_weight="1"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="76dp">

            <TextView
                android:textColor="#B0C4DE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/EnterCarType"
                android:id="@+id/textView10"
                android:layout_marginTop="10dp" />

            <EditText
                android:textColor="#B0C4DE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextCarType"
                android:layout_weight="1"
                android:layout_marginLeft="35dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="98dp">

            <RadioGroup
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:id="@+id/RadioGroupID">

                <RadioButton
                    android:textColor="#B0C4DE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/automatic"
                    android:id="@+id/radioButtonAutomatic"
                    android:checked="false" />

                <RadioButton
                    android:textColor="#B0C4DE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manual"
                    android:id="@+id/radioButtonManual"
                    android:checked="false" />

            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="68dp">

                <TextView
                    android:textColor="#B0C4DE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/AutomatedManuelTextView"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="80dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savebutton"
                android:id="@+id/buttonSaveSettings"
                android:onClick="save" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backbutton"
                android:id="@+id/buttonBack"
                android:layout_marginLeft="125dp"
                android:onClick="back" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>